--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "author": "Umesh Joshi",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "mongoose": "^8.13.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.1",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
